--- a/styles/port.css
+++ b/styles/port.css
@@ -16,6 +16,7 @@ header{
     background-image: url(../images/developer.png),url(../images/header_bg.png);
     background-repeat: no-repeat;
     background-position: top left,bottom right;
+    background-color: #FFF8F3;
 }
 .btn-pr{
     background-color: #FD6E0A;
@@ -26,7 +27,15 @@ header{
     padding: 18px 36px;
     border-radius: 5px;
 }
-
+.sec-headings{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.sec-con{
+    font-size: 18px;
+    color: 757575;
+}
 .font-col{
     color:#FD6E0A ;
 }
@@ -69,4 +78,29 @@ nav ul{
 }
 .br-content{
     max-width: 585px;
+}
+.ab-second-bg{
+    background-color: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 69px;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.p-d{
+    font-weight: bold;
+    font-size: 20px;
+    color: #474747;
+}
+.p-t{
+    font-weight: normal;
+    font-size:20px;
+    color: #757575;
+}
+.ab-items{
+    display: flex;
+    justify-content: space-between;
 }
