--- a/styles/port.css
+++ b/styles/port.css
@@ -122,4 +122,101 @@ main section{
 .skill{
     padding: 30px;
     box-shadow: 0px 4px 50px 0px rgba(0 ,0 ,0 ,0.06) ;
+    text-align: left;
+    
 }
+
+/* resume container styles */
+.resume-container{
+    display: flex;
+    gap: 20px;
+    box-shadow: 10px 10px 10px 10px #f5f0f0cf;
+}
+.res-col-title{
+    font-weight: bold;
+    font-size: 30px;
+    color: #474747;
+}
+.exp-title{
+    font-weight: bold;
+    font-size: 25px;
+    color: #474747;
+}
+.exp-sub-title{
+    font-weight: 600;
+    font-size: 20px;
+}
+.res-heading{
+    font-weight:bold ;
+    font-size: 35px;
+    color: #181818 ;
+    text-align: center;
+}
+.resume-container hr{
+    margin: 30px 5px;
+    
+}
+.btn-pr-res{
+    width: 205px;
+    height: 64px;
+    background-color: #FD6E0A;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    border: none;
+    padding: 18px 36px;
+    border-radius: 5px;
+    display: block;
+    margin: 80px auto;
+    
+    
+    
+    
+} 
+
+/* footer styles */
+.foot-con{
+    background-color: #FFF8F3;
+}
+.fcfirst{
+
+}
+
+.foot-con{
+    display: flex;
+    padding: 130px 230px;
+    gap: 120px;
+}
+.fcfirst .fcsecond{
+    
+}
+.f-inp-con input{
+    background-color: white;
+    width: 461px;
+    height: 64px;
+    border-radius: 5px;
+    border: none;
+    margin-top: 24px;
+}
+.footer-inp textarea{
+    background-color: white;
+    width: 461px;
+    height: 64px;
+    border-radius: 5px;
+    border: none;
+    height: 180px;
+    width: 461px;
+
+}
+.footer-inp ::placeholder{
+    font-size: 16px;
+    color: #757575;
+}
+.footer-inp textarea ::placeholder{
+    font-size: 16px;
+    color: #757575;
+}
+.inp-sub{
+    margin-top: 24px;
+}
+
